Fjerner lombok fra fpsoknad-felles og mottak